[package]
name = "ttodo"
version = "0.1.0"
authors = ["user"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
tui-input = "0.11.1"
tui-textarea = "0.7.0"
